module(
    name = "rules_terraform",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_go", version = "0.49.0")
bazel_dep(name = "gazelle", version = "0.38.0")

# ========================================================================
# Go Lang
# ========================================================================
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "net_starlark_go",
)
